# quick_ssm

./: .gitignore  README.md  copy_train.py  example_interface.py  example_layer.py  pyproject.toml  setup.py
quick_ssm/: __init__.py  depth_diff.py  forward_only.py  layers.py  naive_baseline.py  scan_interface.py  test_backwards.py  test_forwards.py  test_scan_interface.py  test_swiglu_equiv.py  triton_backwards.py  triton_forwards.py  triton_scan.py  triton_shared.py
skills/: SKILLS.md  ssm-scan-low-vram-tiling.md
src/: .test_backwards.py.swp  layers.py  scan_interface.py  test_backwards.py  test_forwards.py  triton_backwards.py  triton_forwards.py  triton_scan.py
