## File: pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta" # Changed == to = here

[project]
name = "quick-ssm"
version = "0.1.0"
description = "An efficient Triton-based SSM scan implementation for PyTorch."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "samblouir", email = "sblouir@gmu.edu" },
]
maintainers = [
    { name = "samblouir", email = "sblouir@gmu.edu" }
]
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0",
    "triton>=3.1",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/samblouir/quick_ssm"
Repository = "https://github.com/samblouir/quick_ssm"
Issues = "https://github.com/samblouir/quick_ssm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
]